--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STELLAR AGENCY</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="./images/stellar-logo.png">
 </head>
 <body>
-    
+    <header>
+            <nav class="nav-bar">
+            <div class="logo">
+                <span class="sparkle">✦</span> Stellar<span>.Agency</span>
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+
+            <div class="nav-cta">
+                <a href="#" class="btn-contact">Contact Us</a>
+            </div>
+            </nav>
+    </header>
+    <script src="index.js"></script>
 </body>
 </html>
