added some text  and icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>STELLAR AGENCY</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="./images/stellar-logo.png">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-p1JXkGmKkj+7EjHk5J8C3YzZpT6jbhMRmH6vX+cGZKnM6Y6zKJw10pz3aFSQb2fhVpKb+LqFq3hLVdxmHo0x5g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 </head>
 <body>
     <header>
@@ -44,6 +51,31 @@
         <a href="#" class="btn-primary">Start Your Project <span class="arrow"></span></a>
         <a href="#" class="btn-secondary"><span class="play-icon">▶</span>Watch Showreel</a>
     </div>
+</section>
+<section class="business-overview">
+  <div class="stats-container">
+    <div class="stat-item">
+      <div class="icon"><img src="" alt=""></div>
+      <h2>150+</h2>
+      <p>Projects Delivered</p>
+    </div>
+    <div class="stat-item">
+      <div class="icon"><i class="fa-regular fa-star"></i></div>
+      <h2>98%</h2>
+      <p>Client Satisfaction</p>
+    </div>
+    <div class="stat-item">
+      <div class="icon"><i class="fa-light fa-users"></i></div>
+      <h2>50+</h2>
+      <p>Global Clients</p>
+    </div>
+  </div>
+
+  <div class="services-header">
+    <span class="badge">Our Services</span>
+    <h1>What We Do Best</h1>
+    <p>We offer a comprehensive suite of services designed to transform your digital presence and accelerate your business growth.</p>
+  </div>
 </section>
     <script src="index.js"></script>
 </body>
