Modifies the name of the website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STELLAR AGENCY</title>
+    <title>TaskFlow</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="./images/stellar-logo.png">
     <link
@@ -18,7 +18,7 @@
     <header>
             <nav class="nav-bar">
             <div class="logo">
-                <span class="sparkle">✦</span> Stellar<span>.Agency</span>
+                <span class="sparkle">✦</span> Task<span>Flow</span>
             </div>
 
             <ul class="nav-links">
